[gd_scene load_steps=2 format=3 uid="uid://nc1cufmnxq1l"]

[ext_resource type="Script" path="res://menu_lvl.gd" id="1_wus5o"]

[node name="menu lvl" type="Node2D"]
script = ExtResource("1_wus5o")

[node name="Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 114.0
offset_right = 876.0
offset_bottom = 225.0
theme_override_font_sizes/font_size = 81
text = "Выбирите уровень"

[node name="1lslslasdadsadad" type="Button" parent="."]
offset_left = 114.0
offset_top = 273.0
offset_right = 344.0
offset_bottom = 354.0
theme_override_constants/icon_max_width = 0
theme_override_font_sizes/font_size = 31
text = "1 уровень"

[node name="2lslsls" type="Button" parent="."]
offset_left = 114.0
offset_top = 390.0
offset_right = 344.0
offset_bottom = 471.0
theme_override_font_sizes/font_size = 31
text = "2 уровень"

[node name="3lslslslll" type="Button" parent="."]
offset_left = 114.0
offset_top = 502.0
offset_right = 344.0
offset_bottom = 583.0
theme_override_font_sizes/font_size = 31
text = "3 уровень
"

[node name="back" type="Button" parent="."]
offset_left = 1647.0
offset_top = 983.0
offset_right = 1853.0
offset_bottom = 1035.0
theme_override_font_sizes/font_size = 31
text = "Назад"

[connection signal="pressed" from="1lslslasdadsadad" to="." method="_on_lslslasdadsadad_pressed"]
[connection signal="pressed" from="2lslsls" to="." method="_on_lslsls_pressed"]
[connection signal="pressed" from="3lslslslll" to="." method="_on_lslslslll_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
