extends Node2D

func _on_back_pressed():
	get_tree().change_scene_to_file("res://menu.tscn")

func _on_lslsls_pressed():
	get_tree().change_scene_to_file("res://раздел в разработке.tscn")

func _on_lslslslll_pressed():
	get_tree().change_scene_to_file("res://раздел в разработке.tscn")


func _on_lslslasdadsadad_pressed():
	get_tree().change_scene_to_file("res://level.tscn")
